objects/Account.object
<CustomObject>
    <fields>
        <fullName>ARI_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if property is ARI Enabled</description>
        <label>ARI Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>From PSG Salesforce.  Appears to classify accounts.</description>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Connections__c</fullName>
        <label>Active Connections</label>
        <picklist>
            <picklistValues>
                <fullName>AR-EQC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR-EQC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-VC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR-VC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARI-EC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN-EC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Star_Rating__c</fullName>
        <formula>TEXT(Star_Rating_Review_ID__r.Assigned_Star_Rating__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Star Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Actual__c</fullName>
        <label>Base Actual</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Delivery_Method__c</fullName>
        <description>Come from PSG.  Indicates how property receives notficiations for bookings</description>
        <label>Booking Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand hotels rolls up to</description>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <description>Chain property rolls up to</description>
        <label>Chain</label>
        <referenceTo>Chain__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closest_Airport__c</fullName>
        <description>Airport Code for nearest airport</description>
        <label>Closest Airport</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_2003__c</fullName>
        <label>Contract Manager 2003</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_2004__c</fullName>
        <label>Contract Manager 2004</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_2005__c</fullName>
        <label>Contract Manager 2005</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_Upside_2011__c</fullName>
        <label>Contract Manager Upside 2011</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_Upside_2012__c</fullName>
        <label>Contract Manager Upside 2012</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Solicitation_2011__c</fullName>
        <description>Horrible Data design from PSG.  The id from PSG for the contract in external contract management tool</description>
        <label>Contract Solicitation 2011</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Solicitation_2012__c</fullName>
        <label>Contract Solicitation 2012</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year - To be Discussed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Types__c</fullName>
        <description>Different contract types for property</description>
        <label>Contract Type(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Name__c</fullName>
        <description>The account name without any additional unique identifier. Used in places where the Expedia ID is unnecessary</description>
        <label>Contracted Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Room_Offering__c</fullName>
        <label>Current Room Offering</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DS_Admintool_VNID__c</fullName>
        <description>Added to accommodate Account data upsert</description>
        <label>DS Admintool VNID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Hotel_Live_on_Site__c</fullName>
        <label>Date Hotel Live on Site</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docusign_Id__c</fullName>
        <label>Docusign Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN_Id__c</fullName>
        <label>EAN Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EQC_Addendum_CM__c</fullName>
        <label>EQC Addendum CM#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESR_Merchant_Venere_ID__c</fullName>
        <description>The Venere ID for hotels that sell ESR inventory on the Venere POS. Also referred to as chameleon Venere ID.</description>
        <inlineHelpText>The Venere ID for hotels that sell ESR inventory on the Venere POS.</inlineHelpText>
        <label>ESR/Merchant Venere ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESR_Structure_Type__c</fullName>
        <description>Lookup to Structure Type for Property at ESR level</description>
        <label>ESR Structure Type</label>
        <referenceTo>Structure_Type__c</referenceTo>
        <relationshipLabel>Accounts (ESR Structure Types)</relationshipLabel>
        <relationshipName>ESR_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESR_or_GDS__c</fullName>
        <label>ESR or GDS?</label>
        <picklist>
            <picklistValues>
                <fullName>ESR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EXPE_Last_day_of_inventory__c</fullName>
        <label>EXPE Last day of inventory</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpediaPay_Last_Used_By__c</fullName>
        <label>ExpediaPay Last Used By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpediaPay_Last_Used_Date__c</fullName>
        <description>Comes from PSG Salesforce.  Date expedia pay service was last used</description>
        <label>Expedia Pay Last Used Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpediaPay_Signup_Status__c</fullName>
        <label>ExpediaPay Sign-Up Status</label>
        <picklist>
            <picklistValues>
                <fullName>Account Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Trained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExpediaPay_Status__c</fullName>
        <description>From PSG Salesforce. Status of Expedia Pay</description>
        <label>ExpediaPay Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedia_Hotel_Id__c</fullName>
        <description>Id that is unique identifier in Lodging Catalog Master database</description>
        <label>Expedia Hotel Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expedia_Virtual_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedia Virtual Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Account_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Salesforce Account.Id field from the PSG Org.  Needed for integration bewteen GSO and PSG Orgs</description>
        <externalId>true</externalId>
        <label>External Account Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fallback_Method__c</fullName>
        <label>Fallback Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax_to_Email_Address__c</fullName>
        <label>Fax to Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_Id__c</fullName>
        <description>Comes from PSG Salesforce.  Federal Tax iD</description>
        <label>Federal Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIMS_Stop_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if ESR Hotels is on Stop Sell from HIMS</description>
        <label>HIMS Stop Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H_S_Contact__c</fullName>
        <label>Health &amp; Safety Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Gas_Status__c</fullName>
        <description>Health &amp; Safety Gas Status</description>
        <label>Health &amp; Safety Gas Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Centralized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Status__c</fullName>
        <description>Health &amp; Safety Status</description>
        <label>Health &amp; Safety Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Self Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Physical Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Escalation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hotel_Type__c</fullName>
        <label>Hotel Type</label>
        <picklist>
            <picklistValues>
                <fullName>AOT-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Beds-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian Overland-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian Trails-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia World-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Horizons-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBS-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diethelm-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESR Lite AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESR Lite NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HotelnJoy-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Pass-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICS-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RoamFree - APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEA Change-APAC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMD - San Diego North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMD - San Diego Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travelguru-APAC Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hotwire_Id__c</fullName>
        <label>Hotwire Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAN_Id__c</fullName>
        <description>Contains the Affiliate network Id for a property</description>
        <label>IAN Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Integration_Sync_Date__c</fullName>
        <description>Date row was updated via integration</description>
        <label>Last Integration Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude of account</description>
        <label>Latitude</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude of account</description>
        <label>Longitude</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Territory__c</fullName>
        <label>MM Territory</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance__c</fullName>
        <description>Used to assist in prioritizing accounts for APAC use only as of 9/2008</description>
        <label>Maintenance</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Managed_By__c</fullName>
        <description>From PSG Salesforce.  Shows who account is managed by</description>
        <label>Managed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Manager_Email__c</fullName>
        <description>Email address for Market Manager (Account Owner from PSG Salesforce)</description>
        <inlineHelpText>Email address for Market Manager</inlineHelpText>
        <label>Market Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Market_Manager_Name__c</fullName>
        <description>Name for Market Manager (Account Owner) from PSG Salesforce</description>
        <inlineHelpText>This is the Account Owner from PSG Salesforce</inlineHelpText>
        <label>Market Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Manager_Phone__c</fullName>
        <description>Phone number for Market Manager (Account Owner) from PSG Salesforce</description>
        <inlineHelpText>Market Manager phone number</inlineHelpText>
        <label>Market Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_in_Stop_Sell__c</fullName>
        <description>From PSG Salesforce.  Number of day property is in stop sell status</description>
        <label>Number of Days in Stop Sell</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_rooms__c</fullName>
        <description>Number of rooms available at the property</description>
        <label>Number of rooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Expedia_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Expedia Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owned_by__c</fullName>
        <label>Owned by</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Owned by)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSG_Lead_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSG Lead Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSG_Market_Id__c</fullName>
        <description>Salesforce Id for Market from PSG Salesforce</description>
        <label>PSG_Market_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Record_Type__c</fullName>
        <description>Developer Name field of PSG Record Type. Used by workflow rules to set correct GSO RecordType</description>
        <label>PSG Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Region_Id__c</fullName>
        <description>Salesforce Id for the Region in PSG Salesforce</description>
        <label>PSG_Region_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Status__c</fullName>
        <description>From PSG Salesforce.  Infamous PSG Status field</description>
        <label>PSG Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the PSG RecordType is Strategic Account</description>
        <label>PSG Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSG_Submarket_Id__c</fullName>
        <description>Salesforce Id for submarket in PSG Salesforce</description>
        <label>PSG_Submarket_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>From PSG Salesforce.  Method of payment to Expedia</description>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Level__c</fullName>
        <description>From PSG Salesforce.  Price level of property</description>
        <label>Price Level</label>
        <picklist>
            <picklistValues>
                <fullName>Lower Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper Tier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QL2_Id__c</fullName>
        <description>Identifier from PSG for QL2 system.  Quote from PSG, &quot;This is the unique identifier from QL2, but  it is not always unique in the QL2 system.&quot;</description>
        <label>QL2 Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA 10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Venere_ID_Date__c</fullName>
        <label>Request Venere ID Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Venere_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Venere ID?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Rating_Review_ID__c</fullName>
        <label>Star Rating Review ID</label>
        <referenceTo>Star_Rating_Review__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Star_Rating_Structure_Type__c</fullName>
        <description>Lookup to Structure Type for Property</description>
        <label>Star Rating Structure Type</label>
        <referenceTo>Structure_Type__c</referenceTo>
        <relationshipLabel>Star Ratings Review (Structure Types)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <label>Star Rating</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Venere property</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Sell_Reason__c</fullName>
        <label>Stop Sell Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Remove - bad economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - closed, change of use or demolished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - guest issues, relocations or discrimination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - health &amp; safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - low demand/sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - owner/ mangement change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - payment issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - rate issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - will re-contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - bad economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - closed, change of use or demolished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - guest issues, relocations or discrimination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - health &amp; safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS – legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - low demand/sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - owner/ mangement change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - payment issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - rate issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - will re-contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switched to EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - bad economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary – contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - guest issues, relocations or discrimination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - health &amp; safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - low demand/sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - MPIF pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - no longer branded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Sell_Start_Date_Temp__c</fullName>
        <label>Stop Sell Start Date Temp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stop_Sell_Start_Date__c</fullName>
        <label>Stop Sell Start Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>